docs: detail user object properties in AuthController swagger annotations
